# asset-rs

./: .eslintignore  .eslintrc.cjs  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
.github/workflows/: release.yml
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  context.rs  embedded_asset.rs  lib.rs  server.rs
docs/: _config.yml  index.html
examples/simple-sample/: README.md  package.json  vite.config.ts
examples/simple-sample-server/: Cargo.toml
examples/simple-sample-server/src/: main.rs
examples/simple-sample/src/: App.vue  main.ts
helper/: entrypoint.ts  load.js
wasm/parser/: Cargo.toml  README.md  package.json
wasm/parser/src/: fs.rs  lib.rs  parser.rs
