[package]
name = "ars-package"
description = "Asset RS - Package with Zero-copy deserialization"
version = "0.0.5"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
flate2 = "1.0.28"
rkyv = { version = "0.7", features = ["validation"] }
