[package]
name = "ars-server"
description = "Asset RS - Package with Zero-copy deserialization"
version = "0.0.2"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flate2 = "1.0.28"
axum = "0.6.12"
bytes = "1"
envy = "0.4.2"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.108"
ahash = "0.8.6"
tracing = "0.1.26"

ars-package = { path = "../../crates/package", version = "0.0.2" }
