[package]
name = "simple-sample-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"
anyhow = "1"

ars-server = { path = "../../crates/server" }